feat: Enhanced onboarding with icons, centralized config, and improved layout
- Added Lucide React icons for all equipment types with centered layout
- Created centralized configuration file (src/config/onboarding.ts) for all onboarding constants
- Updated equipment list: added Bodyweight, removed Suspension Trainer and Stability Ball
- Reorganized personal info layout: sex options in single row, height/weight in 2x3 grids
- Changed sex options from 'Prefer not to say' to 'Other' for better inclusivity
- Fixed inconsistency between Onboarding and Profile components using shared config
- Migrated all custom SVG icons to Lucide React for consistency
- Updated goals list with simplified naming (Weight Loss, Build Muscle, etc.)
- Improved responsive design with better mobile experience
- Added comprehensive TypeScript types for better development experience

--- a/firebase.json
+++ b/firebase.json
@@ -15,6 +15,23 @@
       ]
     }
   ],
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "predeploy": [
+      "npm run build"
+    ]
+  },
   "firestore": {
     "database": "(default)",
     "location": "nam5",
