--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "node scripts/update-version.js && tsc -b && vite build && node scripts/update-version.js",
+    "build:deploy": "node scripts/update-version.js && vite build && node scripts/update-version.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && firebase deploy --only hosting",
