Remove swipe functionality from workout cards
- Removed useGestures import and gesture recognition setup
- Removed swipe handlers for completing/skipping sets and navigating
- Removed gesture hints UI showing swipe instructions
- Workout cards now use button-only interface for better accessibility
- Preserves all functionality through explicit button interactions

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build:deploy": "node scripts/update-version.js && vite build && node scripts/update-version.js",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && firebase deploy --only hosting",
-    "deploy:full": "npm run build && firebase deploy",
+    "clear-cache": "node scripts/clear-cache.js",
+    "deploy": "npm run clear-cache && npm run build && firebase deploy --only hosting",
+    "deploy:full": "npm run clear-cache && npm run build && firebase deploy",
     "version:patch": "npm version patch && npm run deploy",
     "version:minor": "npm version minor && npm run deploy",
     "version:major": "npm version major && npm run deploy"
