--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "openai": "^5.23.0"
+    "openai": "^5.23.0",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
