--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "version:major": "npm version major && npm run deploy"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
