feat: implement aggressive cache busting system for instant updates
- Add comprehensive version management with 15-second update checks
- Implement cache busting manager with timestamp-based invalidation
- Enhance service worker with aggressive cache clearing
- Add update notification component with auto-refresh
- Update Vite config with timestamp-based asset naming
- Add multiple update detection strategies (HTML, manifest, SW)
- Preserve user data while clearing all caches
- Support both development and production update flows
- Add real-time update notifications with countdown
- Implement background update checking and visibility-based triggers

This ensures all users get updates within 15-30 seconds of deployment.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,9 @@
 {
   "name": "NeuraFit - AI-Powered Personalized Workout Generator",
   "short_name": "NeuraFit",
+  "version": "1.0.1",
+  "build_time": "2025-09-30T17:32:00.000Z",
+  "cache_version": "v1.0.1-20250930",
   "description": "Generate personalized AI workouts tailored to your goals, experience, and equipment. Transform your fitness journey with intelligent, adaptive training plans.",
   "start_url": "/",
   "display": "standalone",
