--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/update-version.js && tsc -b && vite build && node scripts/update-version.js",
-    "build:deploy": "node scripts/update-version.js && vite build && node scripts/update-version.js",
+    "build": "tsc -b && vite build",
+    "build:deploy": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && firebase deploy --only hosting",
