--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.3.1",
+    "web-vitals": "^5.1.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
