feat: upgrade to GPT-5 nano with fallback system and deploy to Firebase
- Implement GPT-5 nano model with automatic fallback to GPT-4o
- Add robust JSON parsing to handle markdown code blocks
- Fix workout progress tracking issues (200% complete, incorrect exercise counts)
- Update environment variables for new Cloud Run URLs
- Deploy both backend functions and frontend to Firebase
- Enhance error handling and logging for model selection
- Future-proof system for automatic GPT-5 nano adoption when access is granted

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_WORKOUT_FN_URL=https://us-central1-neurafit-ai-2025.cloudfunctions.net/generateWorkout
+VITE_WORKOUT_FN_URL=https://generateworkout-5zdm7qwt5a-uc.a.run.app
