--- a/package.json
+++ b/package.json
@@ -3,52 +3,83 @@
   "private": true,
   "version": "1.0.1",
   "type": "module",
+  "description": "AI-powered fitness application with personalized workout generation",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
+  "packageManager": "npm@10.9.2",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build && npm run build:sw",
     "build:deploy": "vite build && npm run build:sw",
     "build:sw": "node scripts/build-sw.js",
+    "typecheck": "tsc -b --force",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "preview": "vite preview",
+    "preview:sw": "vite preview --port 4173",
+    "analyze": "vite-bundle-visualizer",
+    "prepack": "npm run lint && npm run typecheck",
     "deploy": "npm run build && firebase deploy --only hosting",
     "deploy:full": "npm run build && firebase deploy",
     "version:patch": "npm version patch && npm run deploy",
     "version:minor": "npm version minor && npm run deploy",
-    "version:major": "npm version major && npm run deploy"
+    "version:major": "npm version major && npm run deploy",
+    "ci": "npm run lint && npm run typecheck && npm run test && npm run build"
   },
   "dependencies": {
+    "@sentry/react": "^8.47.0",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@tanstack/react-query": "^5.64.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
+    "idb-keyval": "^6.2.1",
     "immer": "^10.1.3",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.3.1",
+    "zod": "^3.24.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@firebase/rules-unit-testing": "^5.0.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-react": "^5.0.3",
+    "@vitest/ui": "^3.0.5",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "jsdom": "^26.0.0",
+    "prettier": "^3.4.2",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^4.1.13",
     "terser": "^5.44.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.7",
+    "vite-bundle-visualizer": "^1.2.1",
+    "vitest": "^3.0.5",
     "workbox-build": "^7.3.0",
     "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
