chore: comprehensive codebase optimization
- Enhanced root config files (.gitignore, eslint, firebase, package.json)
- Optimized logo.svg (287 KB → 2.6 KB, 99% reduction)
- Enhanced functions/ configs (tsconfig, eslint, package.json)
- Fixed 7 lint errors and 6 TypeScript strict mode errors in functions/
- Removed 8 temporary documentation markdown files
- Added comprehensive README.md and CHANGELOG.md
- Added .editorconfig, .prettierrc, .nvmrc, .gitattributes
- Added robots.txt for SEO
- Removed .firebase cache from Git tracking
- All lint, typecheck, and build tests passing
- Bundle size: 299 KB gzipped (excellent)
- Production ready for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
 *.local
@@ -18,6 +21,10 @@ dist-ssr
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Firebase
+.firebase
+.firebaserc.local
 
 # Editor directories and files
 .vscode/*
@@ -30,5 +37,18 @@ dist-ssr
 *.sln
 *.sw?
 
+# Testing
+coverage
+.nyc_output
+
+# Temporary files
+*.tmp
+*.temp
+.cache
+
 # Consolidated codebase file (regenerate with ./consolidate-codebase.sh)
 neurafit-codebase.txt
+
+# Backup files
+*-old-backup.*
+*-backup.*
