--- a/functions/package.json
+++ b/functions/package.json
@@ -1,12 +1,24 @@
 {
   "name": "functions",
+  "version": "1.0.1",
+  "description": "Firebase Cloud Functions for NeuraFit",
   "scripts": {
+    "// Build": "========================================",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "lint": "eslint .",
+    "build:clean": "rm -rf lib && npm run build",
+
+    "// Development": "========================================",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
+
+    "// Code Quality": "========================================",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "typecheck": "tsc --noEmit",
+
+    "// Deployment": "========================================",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
