--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,10 +1,45 @@
-# Compiled JavaScript files
-lib/**/*.js
-lib/**/*.js.map
+# Compiled Output
+lib/
+*.js
+*.js.map
+*.d.ts
+*.d.ts.map
 
-# TypeScript v1 declaration files
-typings/
-
-# Node.js dependency directory
+# Dependencies
 node_modules/
+
+# TypeScript
+typings/
+*.tsbuildinfo
+
+# Environment & Config
 *.local
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary
+*.tmp
+*.temp
+.cache/
