--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,13 @@
   ],
   "hosting": {
     "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "cleanUrls": true,
+    "trailingSlash": false,
     "rewrites": [
       {
         "source": "**",
@@ -33,7 +40,7 @@
           },
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' https://js.stripe.com https://www.googletagmanager.com https://www.google-analytics.com https://apis.google.com https://www.gstatic.com https://www.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: blob:; font-src 'self' https://fonts.gstatic.com data:; connect-src 'self' https://neurafit-ai-2025.web.app https://neurafit-ai-2025.firebaseapp.com https://firestore.googleapis.com https://www.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebase.googleapis.com https://firebaseinstallations.googleapis.com https://fonts.googleapis.com https://fonts.gstatic.com https://www.google-analytics.com https://analytics.google.com https://stats.g.doubleclick.net https://accounts.google.com https://generateworkout-5zdm7qwt5a-uc.a.run.app https://createpaymentintent-5zdm7qwt5a-uc.a.run.app https://cancelusersubscription-5zdm7qwt5a-uc.a.run.app https://reactivateusersubscription-5zdm7qwt5a-uc.a.run.app https://getcustomerportalurl-5zdm7qwt5a-uc.a.run.app https://getsubscriptiondetails-5zdm7qwt5a-uc.a.run.app https://getbillinghistory-5zdm7qwt5a-uc.a.run.app; frame-src https://js.stripe.com https://hooks.stripe.com https://accounts.google.com https://content-firebaseappcheck.googleapis.com https://*.firebaseapp.com https://www.google.com https://recaptcha.google.com https://www.recaptcha.net; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
+            "value": "default-src 'self'; script-src 'self' https://js.stripe.com https://www.googletagmanager.com https://www.google-analytics.com https://apis.google.com https://www.gstatic.com https://www.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: blob:; font-src 'self' https://fonts.gstatic.com data:; connect-src 'self' https://neurastack.ai https://neurafit-ai-2025.web.app https://neurafit-ai-2025.firebaseapp.com https://firestore.googleapis.com https://www.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebase.googleapis.com https://firebaseinstallations.googleapis.com https://fonts.googleapis.com https://fonts.gstatic.com https://www.google-analytics.com https://analytics.google.com https://stats.g.doubleclick.net https://accounts.google.com https://generateworkout-5zdm7qwt5a-uc.a.run.app https://createpaymentintent-5zdm7qwt5a-uc.a.run.app https://cancelusersubscription-5zdm7qwt5a-uc.a.run.app https://reactivateusersubscription-5zdm7qwt5a-uc.a.run.app https://getcustomerportalurl-5zdm7qwt5a-uc.a.run.app https://getsubscriptiondetails-5zdm7qwt5a-uc.a.run.app https://getbillinghistory-5zdm7qwt5a-uc.a.run.app; frame-src https://js.stripe.com https://hooks.stripe.com https://accounts.google.com https://content-firebaseappcheck.googleapis.com https://*.firebaseapp.com https://www.google.com https://recaptcha.google.com https://www.recaptcha.net; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
           },
           {
             "key": "Referrer-Policy",
