chore: bump version to 1.0.2 and implement comprehensive cache busting strategy
- Add automated version bumping script (scripts/version-bump.js)
- Add automated deployment script (scripts/deploy.js)
- Add prebuild cache clearing to prevent stale environment variables
- Create comprehensive deployment documentation (DEPLOYMENT.md)
- Create quick reference guide (.github/DEPLOYMENT_QUICK_REFERENCE.md)
- Create project README with setup and deployment instructions
- Update package.json with new deployment workflow commands
- Fix service worker navigation preload warning
- Fix COOP headers for Firebase Auth popups
- Fix 502 Bad Gateway by updating Cloud Functions URL
- Remove unnecessary documentation and test files
- Add new UI components, hooks, and utilities
- Improve error handling and validation
- Update Firestore rules and Firebase configuration

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neurafit",
   "private": true,
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "description": "AI-powered fitness application with personalized workout generation",
   "engines": {
@@ -14,51 +14,46 @@
     "dev": "vite",
     "dev:host": "vite --host",
     "dev:https": "vite --https",
-
     "// Building": "========================================",
+    "prebuild": "npm run clean:cache",
     "build": "tsc -b && vite build && npm run build:sw && npm run build:check",
     "build:deploy": "vite build && npm run build:sw",
     "build:sw": "node scripts/build-sw.js",
     "build:analyze": "ANALYZE=true npm run build",
     "build:check": "node scripts/check-bundle-size.js",
-
+    "clean:cache": "rm -rf dist node_modules/.vite .vite node_modules/.cache",
+    "// Versioning": "========================================",
+    "version:patch": "npm version patch && npm run deploy",
+    "version:minor": "npm version minor && npm run deploy",
+    "version:major": "npm version major && npm run deploy",
+    "version:check": "node -p \"require('./package.json').version\"",
+    "// Deployment": "========================================",
+    "deploy": "npm run build && firebase deploy --only hosting",
+    "deploy:all": "node scripts/deploy.js hosting,functions",
+    "deploy:functions": "npm run build && firebase deploy --only functions",
     "// Code Quality": "========================================",
     "typecheck": "tsc -b --force",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
-
     "// Testing": "========================================",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-
     "// Preview": "========================================",
     "preview": "vite preview",
     "preview:sw": "vite preview --port 4173",
-
     "// Analysis": "========================================",
     "analyze": "vite-bundle-visualizer",
     "analyze:build": "npm run build:analyze && open dist/stats.html",
-
-    "// Deployment": "========================================",
-    "deploy": "npm run build && firebase deploy --only hosting",
     "deploy:full": "npm run build && firebase deploy",
-    "deploy:functions": "npm run build && firebase deploy --only functions",
     "deploy:rules": "firebase deploy --only firestore:rules",
-
-    "// Versioning": "========================================",
-    "version:patch": "npm version patch && npm run deploy",
-    "version:minor": "npm version minor && npm run deploy",
-    "version:major": "npm version major && npm run deploy",
-
     "// Maintenance": "========================================",
     "clean": "rm -rf dist node_modules/.vite node_modules/.tmp",
     "clean:all": "rm -rf dist node_modules",
     "reinstall": "npm run clean:all && npm install",
-
     "// CI/CD": "========================================",
     "ci": "npm run lint && npm run typecheck && npm run test && npm run build",
     "prepack": "npm run lint && npm run typecheck"
@@ -67,7 +62,6 @@
     "@sentry/react": "^8.47.0",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
-    "@tanstack/react-query": "^5.64.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
