--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "build:check": "node scripts/check-bundle-size.js",
     "clean:cache": "rm -rf dist node_modules/.vite .vite node_modules/.cache",
     "// Versioning": "========================================",
-    "version:patch": "npm version patch && npm run deploy",
-    "version:minor": "npm version minor && npm run deploy",
-    "version:major": "npm version major && npm run deploy",
-    "version:check": "node -p \"require('./package.json').version\"",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
+    "version:check": "node -p \"JSON.parse(require('fs').readFileSync('./package.json', 'utf-8')).version\"",
     "// Deployment": "========================================",
     "deploy": "npm run build && firebase deploy --only hosting",
     "deploy:all": "node scripts/deploy.js hosting,functions",
@@ -48,7 +48,6 @@
     "// Analysis": "========================================",
     "analyze": "vite-bundle-visualizer",
     "analyze:build": "npm run build:analyze && open dist/stats.html",
-    "deploy:full": "npm run build && firebase deploy",
     "deploy:rules": "firebase deploy --only firestore:rules",
     "// Maintenance": "========================================",
     "clean": "rm -rf dist node_modules/.vite node_modules/.tmp",
