--- a/functions/package.json
+++ b/functions/package.json
@@ -7,17 +7,14 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "build:clean": "rm -rf lib && npm run build",
-
     "// Development": "========================================",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-
     "// Code Quality": "========================================",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit",
-
     "// Deployment": "========================================",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
@@ -29,8 +26,7 @@
   "dependencies": {
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "openai": "^5.23.0",
-    "stripe": "^18.5.0"
+    "openai": "^5.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
