--- a/firebase.json
+++ b/firebase.json
@@ -44,7 +44,7 @@
           },
           {
             "key": "Cross-Origin-Opener-Policy",
-            "value": "same-origin-allow-popups"
+            "value": "unsafe-none"
           },
           {
             "key": "Cross-Origin-Embedder-Policy",
