--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "deploy": "npm run build && firebase deploy --only hosting",
     "deploy:all": "node scripts/deploy.js hosting,functions",
     "deploy:functions": "npm run build && firebase deploy --only functions",
+    "deploy:verify": "node scripts/verify-deployment-setup.js",
     "// Code Quality": "========================================",
     "typecheck": "tsc -b --force",
     "lint": "eslint .",
