--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -163,13 +163,16 @@ jobs:
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
       
+      - name: Authenticate with Google Cloud
+        if: contains(github.event.inputs.deploy_target, 'functions') || github.event.inputs.deploy_target == '' && github.ref == 'refs/heads/main'
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+
       - name: Deploy Functions (if needed)
         if: contains(github.event.inputs.deploy_target, 'functions') || github.event.inputs.deploy_target == '' && github.ref == 'refs/heads/main'
         run: |
-          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > $HOME/firebase-service-account.json
-          export GOOGLE_APPLICATION_CREDENTIALS=$HOME/firebase-service-account.json
           npx firebase-tools deploy --only functions --project neurafit-ai-2025 --non-interactive
-          rm $HOME/firebase-service-account.json
       
       - name: Verify deployment
         run: |
