--- a/firebase.json
+++ b/firebase.json
@@ -52,7 +52,7 @@
           },
           {
             "key": "Permissions-Policy",
-            "value": "geolocation=(), microphone=(), camera=()"
+            "value": "geolocation=(), microphone=(), camera=(), private-token=()"
           },
           {
             "key": "X-Content-Type-Options",
