Replace reCAPTCHA v2 with Firebase App Check (reCAPTCHA v3)
Major improvements:
- Remove annoying reCAPTCHA challenges (no more 'I'm not a robot')
- Implement invisible reCAPTCHA v3 verification
- Better security across all Firebase services
- Cleaner code (removed 50+ lines of manual reCAPTCHA management)
- No more domain authorization issues

Code changes:
- Add Firebase App Check initialization in src/lib/firebase.ts
- Remove RecaptchaVerifier from src/pages/Auth.tsx
- Simplify signInWithPhoneNumber() - no manual verification needed
- Add VITE_RECAPTCHA_V3_SITE_KEY environment variable
- Update .env.example with App Check instructions

Migration required:
1. Enable App Check in Firebase Console (opened in browser)
2. Register app with reCAPTCHA v3 provider
3. Add VITE_RECAPTCHA_V3_SITE_KEY to .env file
4. Rebuild and deploy

See opened Firebase Console for setup instructions.

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 VITE_FIREBASE_APP_ID=your_firebase_app_id
 VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
 
+# Firebase App Check - reCAPTCHA v3 Site Key
+# Get this from Firebase Console > App Check > reCAPTCHA v3
+# This replaces the old reCAPTCHA v2 for phone authentication
+VITE_RECAPTCHA_V3_SITE_KEY=your_recaptcha_v3_site_key_here
+
 # Environment
 # Options: development, staging, production
 VITE_APP_ENV=development
