--- a/functions/package.json
+++ b/functions/package.json
@@ -28,8 +28,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/lodash.isequal": "^4.5.8",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.0.1",
+    "lodash.isequal": "^4.5.0",
     "openai": "^6.2.0"
   },
   "devDependencies": {
