fix: resolve console errors and improve cache management
- Remove unsupported 'private-token' from Permissions-Policy header
- Add versioned cache names to service worker for better cache busting
- Bump version to 1.0.16
- Add clear-cache.html utility page for users experiencing cache issues
- Fix service worker build script to properly read package.json version

Fixes:
- Permissions-Policy 'private-token' warning from reCAPTCHA
- Service worker navigation preload warnings
- Module loading failures due to stale cache
- reCAPTCHA 401 errors (domain authorization)

--- a/firebase.json
+++ b/firebase.json
@@ -52,7 +52,7 @@
           },
           {
             "key": "Permissions-Policy",
-            "value": "geolocation=(), microphone=(), camera=(), private-token=()"
+            "value": "geolocation=(), microphone=(), camera=()"
           },
           {
             "key": "X-Content-Type-Options",
