fix: improve service worker configuration and headers
- Add interest-cohort to Permissions-Policy for privacy
- Inline Workbox runtime for better control
- Improve service worker cache busting

--- a/firebase.json
+++ b/firebase.json
@@ -52,7 +52,7 @@
           },
           {
             "key": "Permissions-Policy",
-            "value": "geolocation=(), microphone=(), camera=()"
+            "value": "geolocation=(), microphone=(), camera=(), interest-cohort=()"
           },
           {
             "key": "X-Content-Type-Options",
