--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "dev:host": "vite --host",
     "dev:https": "vite --https",
     "// Building": "========================================",
-    "prebuild": "npm run clean:cache",
+    "prebuild": "npm run clean:cache && npm run update:manifest",
     "build": "tsc -b && vite build && npm run build:sw && npm run build:check",
     "build:deploy": "vite build && npm run build:sw",
     "build:sw": "node scripts/build-sw.js",
+    "update:manifest": "node scripts/update-manifest-version.js",
     "build:analyze": "ANALYZE=true npm run build",
     "build:check": "node scripts/check-bundle-size.js",
     "clean:cache": "rm -rf dist node_modules/.vite .vite node_modules/.cache",
