feat: implement Vite cache prevention and service worker optimization
- Add .vite and node_modules/.vite to .gitignore to prevent cache commits
- Update build scripts to run npm run clean:cache before build
- Add Vite plugin to clear cache before build
- Add force: true and noDiscovery: true to optimizeDeps for production
- Implement service worker with offline support and cache strategies
- Update manifest.json with proper PWA configuration
- Enhance AppProvider with cache management and offline detection
- Improve OpenAI configuration with deterministic seeding
- Optimize workout generation with better error handling
- Remove temporary documentation files from root directory
- Add comprehensive VITE_CACHE_PREVENTION.md documentation

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,10 @@ coverage
 *.temp
 .cache
 
+# Vite cache - must be regenerated on each build
+.vite
+node_modules/.vite
+
 # Consolidated codebase file (regenerate with ./consolidate-codebase.sh)
 neurafit-codebase.txt
 
