--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "dev:https": "vite --https",
     "// Building": "========================================",
     "prebuild": "npm run clean:cache && npm run update:manifest",
-    "build": "tsc -b && vite build && npm run build:sw && npm run build:check",
-    "build:deploy": "vite build && npm run build:sw",
+    "build": "npm run clean:cache && tsc -b && vite build && npm run build:sw && npm run build:check",
+    "build:deploy": "npm run clean:cache && vite build && npm run build:sw",
     "build:sw": "node scripts/build-sw.js",
     "update:manifest": "node scripts/update-manifest-version.js",
     "build:analyze": "ANALYZE=true npm run build",
