fix: resolve all deployment errors - service worker MIME types, async handling, and cloud function validation

--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "packageManager": "npm@10.9.2",
   "scripts": {
     "// Development": "========================================",
+    "predev": "node scripts/clear-all-caches.js",
     "dev": "vite",
     "dev:host": "vite --host",
     "dev:https": "vite --https",
     "// Building": "========================================",
-    "prebuild": "npm run clean:cache && npm run update:manifest",
-    "build": "npm run clean:cache && tsc -b && vite build && npm run build:sw && npm run build:check",
-    "build:deploy": "npm run clean:cache && vite build && npm run build:sw",
+    "prebuild": "node scripts/clear-all-caches.js && npm run update:manifest",
+    "build": "node scripts/clear-all-caches.js && tsc -b && vite build && npm run build:sw && npm run build:check",
+    "build:deploy": "node scripts/clear-all-caches.js && vite build && npm run build:sw",
     "build:sw": "node scripts/build-sw.js",
     "update:manifest": "node scripts/update-manifest-version.js",
     "build:analyze": "ANALYZE=true npm run build",
     "build:check": "node scripts/check-bundle-size.js",
-    "clean:cache": "rm -rf dist node_modules/.vite .vite node_modules/.cache",
+    "clean:cache": "node scripts/clear-all-caches.js",
     "// Deployment": "========================================",
     "deploy": "npm run build && firebase deploy --only hosting",
     "deploy:all": "node scripts/deploy.js hosting,functions",
