refactor: comprehensive pre-production optimization and cleanup
- Remove 9 unnecessary analysis and test files from root directory
- Remove 2 unnecessary documentation files from docs/
- Optimize all root configuration files (package.json, vite.config.ts, eslint.config.js, firebase.json, tsconfig files)
- Reduce index.html from 325 to 72 lines with minified JSON-LD and CSS
- Optimize all build scripts (build-sw.js, check-bundle-size.js, clear-all-caches.js, deploy.js, update-manifest-version.js)
- Optimize functions configuration and build files
- Remove verbose comments and consolidate code across all configuration files
- Fix TypeScript type issues in vite.config.ts
- Maintain all functionality while improving code quality and maintainability
- All tests passing (45/45), build successful, bundle size within limits

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,23 +1,16 @@
 {
   "compilerOptions": {
-    /* Language and Environment */
     "target": "es2017",
     "lib": ["es2017"],
-
-    /* Modules */
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-
-    /* Emit */
     "outDir": "lib",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
     "removeComments": true,
-
-    /* Type Checking */
     "strict": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
@@ -26,19 +19,10 @@
     "noUncheckedIndexedAccess": true,
     "allowUnusedLabels": false,
     "allowUnreachableCode": false,
-
-    /* Interop Constraints */
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
   "compileOnSave": true,
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "lib",
-    "**/*.test.ts",
-    "**/*.spec.ts"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "lib", "**/*.test.ts", "**/*.spec.ts"]
 }
