--- a/package.json
+++ b/package.json
@@ -10,49 +10,28 @@
   },
   "packageManager": "npm@10.9.2",
   "scripts": {
-    "// Development": "========================================",
-    "predev": "node scripts/clear-all-caches.js",
     "dev": "vite",
     "dev:host": "vite --host",
     "dev:https": "vite --https",
-    "// Building": "========================================",
-    "prebuild": "node scripts/clear-all-caches.js && npm run update:manifest",
-    "build": "node scripts/clear-all-caches.js && tsc -b && vite build && npm run build:sw && npm run build:check",
-    "build:deploy": "node scripts/clear-all-caches.js && vite build && npm run build:sw",
+    "build": "tsc -b && vite build && npm run build:sw && npm run build:check",
     "build:sw": "node scripts/build-sw.js",
-    "update:manifest": "node scripts/update-manifest-version.js",
-    "build:analyze": "ANALYZE=true npm run build",
     "build:check": "node scripts/check-bundle-size.js",
-    "clean:cache": "node scripts/clear-all-caches.js",
-    "// Deployment": "========================================",
+    "build:analyze": "ANALYZE=true npm run build",
     "deploy": "npm run build && firebase deploy --only hosting",
-    "deploy:all": "node scripts/deploy.js hosting,functions",
     "deploy:functions": "npm run build && firebase deploy --only functions",
+    "deploy:all": "npm run build && firebase deploy",
     "deploy:rules": "firebase deploy --only firestore:rules",
-    "// Code Quality": "========================================",
     "typecheck": "tsc -b --force",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "// Testing": "========================================",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "// Preview": "========================================",
     "preview": "vite preview",
-    "preview:sw": "vite preview --port 4173",
-    "// Analysis": "========================================",
-    "analyze": "vite-bundle-visualizer",
-    "analyze:build": "npm run build:analyze && open dist/stats.html",
-    "// Maintenance": "========================================",
-    "clean": "rm -rf dist node_modules/.vite node_modules/.tmp",
-    "clean:all": "rm -rf dist node_modules",
-    "reinstall": "npm run clean:all && npm install",
-    "// CI/CD": "========================================",
-    "ci": "npm run lint && npm run typecheck && npm run test && npm run build",
-    "prepack": "npm run lint && npm run typecheck"
+    "ci": "npm run lint && npm run typecheck && npm run test && npm run build"
   },
   "dependencies": {
     "@sentry/react": "^8.47.0",
