--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,14 +7,8 @@
     "module": "ESNext",
     "types": ["vite/client", "node"],
     "skipLibCheck": true,
-
-    /* Path Aliases */
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    },
-
-    /* Bundler mode */
+    "paths": { "@/*": ["src/*"] },
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
@@ -22,8 +16,6 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Linting - Production Strictness */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
